--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.4",
         "spatie/laravel-permission": "^3.18",
+        "yajra/laravel-datatables-buttons": "^4.10",
         "yajra/laravel-datatables-oracle": "^9.15"
     },
     "require-dev": {
